--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,19 +6,18 @@
     android:layout_height="match_parent"
     tools:context="smart.photoutil.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-    <!--<ImageView-->
-        <!--android:id="@+id/iv"-->
-        <!--android:layout_width="450dp"-->
-        <!--android:layout_height="350dp"-->
-        <!--/>-->
+
+
+        <smart.photoutil.View.ArrowHead
+            android:id="@+id/ArrowHeadSurface"
+            android:layout_marginStart="@dimen/x23"
+            android:layout_marginTop="@dimen/y94"
+            android:layout_width="@dimen/x1256"
+            android:layout_height="@dimen/y677"
+            android:layout_gravity="center"
+            android:visibility="gone" />
+
+
 
 </android.support.constraint.ConstraintLayout>
